<resources>
    <string name="app_name">cd</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP ? <b>Resend</b></string>
    <string name="phone">Phone</string>
    <string name="_91xxxxxxxxxx">+91xxxxxxxxxx</string>
    <string name="submit">Submit</string>
    <string name="xxxxxx">xxxxxx</string>
    <string name="please_enter_verification_code_we_send_non_91xxxxxxxxxx">Please Enter Verification Code we send \non +91xxxxxxxxxx</string>
    <string name="please_enter_your_phone_number_to_continue">Please Enter Your Phone Number To Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="continues">continues</string>
    <string name="you_are_logged_in_as">You are logged in as</string>
    <string name="logout">Logout</string>
    <string name="sannibh_techonologies">SANNIBH TECHONOLOGIES</string>
    <string name="diary">Diary</string>
    <string name="from">from</string>
    <string name="todo">todo</string>
    <string name="address">Address:</string>
    <string name="blood_group">Blood group:</string>
    <string name="city">City:</string>
    <string-array name="Spinner_items">
        <item>Choose Below</item>
        <item>Name</item>
        <item>Contact</item>
        <item>Address</item>
        <item>Blood Group</item>
        <item>City</item>
    </string-array>
</resources>