<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@drawable/ic_baseline_menu_book_24"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/diary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/from"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="135dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:text="@string/sannibh_techonologies"
        android:textColor="@color/blue"
        android:textSize="25sp" />

</RelativeLayout>